--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@ textarea{
     font-size: 12rem;
     color: var(--font-color-primary);
 }
+.btnEnviar{
+    background: red;
+}
 .main__container textarea{
     justify-self: center;
     background-color: var(--color-comp);
