se agrego el la logica para hacer funcionar el juego en hiragana, tambien se añadio el enter como boton para enviar datos y validar el puntaje o el juego en general

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ textarea{
     color: var(--font-color-primary);
 }
 .btnEnviar{
-    background: red;
+    display: none;
 }
 .main__container textarea{
     justify-self: center;
