--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 body{
     margin: 1rem;
-    background-color: var(--second-background);
+    background: var(--second-background);
     font-family: var(--tipo-rubik);
 }
 /* Extras */
@@ -36,7 +36,7 @@ textarea{
 
 /* Contenido principal - fondo/logo - header - nav*/
 .container{
-    background-color: var(--first-background);
+    background: var(--first-background);
     width: 100%;
     height: 100%;
 }
@@ -64,7 +64,7 @@ textarea{
 }
 /* Botones al ser seleccionados  */
 .on{
-    background-color: var(--color-comp);
+    background: var(--color-comp);
     border-radius: 1.5rem 0 1.5rem 1.5rem;
     transition: all 1.4s ease;
 
@@ -100,7 +100,7 @@ textarea{
 }
 .main__container textarea{
     justify-self: center;
-    background-color: var(--color-comp);
+    background: var(--color-comp);
     border-radius: 2rem;
     height: 40px;
     color: var(--font-color-primary);
