--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ textarea{
 
 /* Contenido principal - fondo/logo - header - nav*/
 .container{
-    background: var(--first-background);
+    background-color: var(--first-background);
     width: 100%;
     height: 100%;
 }
