--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 }
 
 body{
-    height: 100%;
     margin: 1rem;
     background-color: var(--second-background);
     font-family: var(--tipo-rubik);
@@ -51,30 +50,39 @@ textarea{
 .container{
     background-color: var(--first-background);
     width: 100%;
-    height: 100%;
+    position: relative;
+    height: 100vh;
+    padding: 1rem;
+    z-index: 1;
 }
 .header__logo{
-    display: flex;
-    flex-direction: column-reverse;
+    bottom: 0rem;
     margin-left: -3rem;
     color: var(--second-background);
     font-size: 15rem;
     line-height: 1;
+    position: fixed;
+    z-index: -1;
 
 }
 .header__navGuia{
-    position: fixed;
+    position: absolute;
     top: -1rem;
-    right: 0rem;
+    right: -1rem;
     border-radius: 25rem;
     background-color: var(--first-background);
-    padding: 2rem;
+    padding: 1.3rem;
     color: var(--font-color-primary);
     cursor: pointer;
     z-index: 2;
+    border: 2px solid var(--second-background);
 
 }
+
 .guiaAbierta{
+    position: absolute;
+    z-index: 1;
+    border: 2px solid var(--first-background);
     background: var(--second-background);
     color: var(--color-comp);
 
@@ -124,21 +132,20 @@ textarea{
     display: none;
 }
 .main__container textarea{
+    padding: 1rem;
     justify-self: center;
     background: var(--color-comp);
     border-radius: 2rem;
-    height: 40px;
+    height: 50px;
     color: var(--font-color-primary);
     font-size: 1.3rem;
     text-align: center;
-    line-height: 40px;
-    margin-bottom: 3rem;
+
+
 }
 .main__container textarea::placeholder{
     color: var(--font-color-primary);
-    font-size: 1.3rem;
-    text-align: center;
-    line-height: 40px;
+
 }
 
 .main__container textarea:focus{
@@ -153,12 +160,7 @@ textarea{
 .guia{
     height: 100%;
     width: 100%;
-    top: 0rem;
-    left: 23rem;
-    position: fixed;
-    background: var( --first-background);
-    transition: all .5s ease-in-out;
-    -webkit-transition: all .5ss ease-in-
+
 }
 .guia__container{
     width: 90%;
@@ -174,4 +176,90 @@ textarea{
     display: grid;
     align-items: center;
     text-align: center;
+}
+.guiaMobile{
+    height: 100%;
+    width: 100%;
+    top: 0rem;
+    left: 100%;
+    position: fixed;
+    align-items: center;
+    background: var( --first-background);
+    transition: all .5s ease-in-out;
+    -webkit-transition: all .5ss ease-in-
+}
+.guiaDesktop{
+    display: none;
+}
+
+/* DESKTOP  */
+@media (min-width: 1024px) {
+    /* menu desplegable */
+    .guiaMobile{
+        display: none;
+        
+    }
+    .guiaDesktop{
+        display: flex;
+        height: 100%;
+        width: 100%;
+        top: 0rem;
+        left: 100%;
+        position: fixed;
+        align-items: normal;
+        background: var( --first-background);
+        transition: all .5s ease-in-out;
+        -webkit-transition: all .5ss ease-in-
+    }
+    .guia__silabarios{
+        text-align: left;
+    }
+    /* contenido */
+    .header__logo {
+        top: 0;
+        left: 0;
+        font-size: 36rem;
+        font-weight: 0;
+        position: absolute;
+    }
+    .header__navGuia {
+        padding: 2.3rem;
+        font-size: 1rem;
+        border-radius: 25rem;
+        border: 3px solid var(--second-background);
+    }
+    .cerrar{
+        border-radius: 50%;
+    }
+    .header__button{
+        position: absolute;
+        top: 40rem;
+    }
+    #hira, #kara{
+        font-size: 2.5rem;
+    }
+    /* Main */
+    .main{
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
+    .main__container{
+        grid-column:  2/3 ;
+        grid-row: 2/4;
+    }
+    .main__container p{
+        font-size: 3rem;
+        margin: 0;
+    }
+    .main__silabaRandom {
+        margin: 0;
+        align-items: end;
+        font-size: 18rem;
+    }
+    .main__container textarea{
+        height: auto;
+        font-size: 1.4rem;
+    }
+
 }
