--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,8 @@ textarea{
 
 .main__container{
     display: grid;
+    justify-items: center;
+    place-content: center;
 }
 .main__contador{
     margin: .5rem;
@@ -129,11 +131,13 @@ textarea{
     font-family: var(--tipo-jp);
 }
 .btnEnviar{
-    display: none;
+    width: 5rem;
+    text-align: center;
+    background-color: var(--color-comp);
+    cursor: pointer;
 }
 .main__container textarea{
-    padding: 1rem;
-    justify-self: center;
+    padding: .5rem;
     background: var(--color-comp);
     border-radius: 2rem;
     height: 50px;
@@ -261,5 +265,7 @@ textarea{
         height: auto;
         font-size: 1.4rem;
     }
-
+    .btnEnviar{
+        display: none;
+    }
 }
